data/derived/fa15/progs/unify/prog0841.ml.out
Characters 84-86:
  | Sine(e1) -> sin (eval e1);;
                          ^^
Error: This expression has type expr but an expression was expected of type
         expr * 'a * 'a
